# webassembly-rust

./: .gitignore  Cargo.toml  Makefile  README.md  esbuild.config.mjs  package.json  pnpm-lock.yaml
.bin/.shims/: wasm-pack
.bin/rust-1.78.0/wasm-pack/0.13.0/: .crates2.json
.bin/rust-1.79.0/wasm-pack/0.13.0/: .crates.toml  .crates2.json
.cargo/: config.toml
public/: index.html  main.js
src/: App.tsx  helpers.ts  index.css  lib.rs  worker.ts
