[package]
name = "webassembly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23.14"
imagequant = { version = "4.2.0", default-features = false }
base64 = "0.13"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }

[package.metadata.bin]
wasm-pack = { version = "0.13.0" }
